# avaluma-examples

./: .gitignore  README.md
avatar-server/: README.md  docker-compose.yaml
avatar-server/assets/avatars/: README.md
avatar-server/reverse_proxy/: Caddyfile  docker-compose.yaml
livekit/: .env.example  Dockerfile  build-docker-and-upload-to-gcp.sh  docker-compose.yaml  pyproject.toml
livekit-agent/: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
livekit-agent/agents/: agent-1.py
livekit/src/: agent.py  agent_with_local_avatar.py  local_avatar_for_external_agent.py
livekit/src/agents/: external_agent_with_avatar.py  livekit_agent_with_avatar.py
livekit/src/tests/: test-rtc-input.py
livekit/src/utils/: download_plugin_files.py
